# P10

./: .gitignore  .gitmodules  LICENSE  README.md  bringup.sh  build_colcon.sh  data_processing.sh  data_processing_for_exstra_testing.sh  flash_teensy.sh  install.sh  install_bringup_service.sh  install_led.sh  ros_bag.sh
src/spice/: CMakeLists.txt  dynamic_obstacle_layer.xml  package.xml
src/spice/config/: map.yaml  navigation.yaml
src/spice/config/behavior_trees/: custom_test_bf.xml
src/spice/include/spice/: central_path_planner.hpp  dynamic_obstacle_layer.hpp  work_cell.hpp  work_cell_queue_manager.hpp  work_cell_state_machine.hpp
src/spice/include/spice/costmaps/: costmap.hpp  global_costmap.hpp  prioritized_costmap.hpp
src/spice/include/spice/planners/: a_star_planner.hpp  global_planner.hpp  navfn.hpp  straight_line_planner.hpp
src/spice/include/spice/work_cells/: queue_manager.hpp  work_cell.hpp  work_cell_queue_position_manager.hpp  (+1 more)
src/spice/launch/: bringup_polybot.launch.py  bringup_polybot.py  central_stack.launch.py  global_map_server.launch.py  localization.launch.py  nav2_bringup_v2.launch.py  nav2_localization_v2.launch.py  navigation.launch.py  robot_bringup.launch.py  robot_bringup_v2.launch.py  robot_stack.launch.py  simulated_robot.launch.py  tf_relay.launch.py  v2_robot_stack.launch.py
src/spice/launch/old/: nav2_bringup_v2.launch.py  nav_bringup.launch.py  robot_bringup_v2.launch.py  v2_robot_stack.launch.py
src/spice/scripts/: SwarmManager.py  data_processing.py  dynamic_obstacle_avoidance.py  gui.py  led_node.py  performance_monitor_node.py  polybot_agent.py  robot_state.py  robot_state_manager_node.py  simulated_polybot_agent.py  spawn_robots.py  work_tree.py
src/spice/src/: DynamicObstacleLayer.cpp  FramePublisher.cpp  Robot_queuer.cpp  SetRobotTaskPoses.cpp  TFRelay.cpp  TaskAllocator.cpp  TaskAllocator2.cpp  TaskAllocator_old.cpp  WorkCell.cpp  WorkCellAllocator.cpp  WorkCellQueueManager.cpp  WorkCellSimulator.cpp  WorkCellStateMachine.cpp  central_path_planner.cpp
src/spice/src/costmaps/: costmap.cpp  global_costmap.cpp  prioritized_costmap.cpp
src/spice/src/planners/: a_star_planner.cpp  global_planner.cpp  navfn.cpp  straight_line_planner.cpp
src/spice/src/work_cells/: QueueManager.cpp  WorkCell.cpp  WorkCellQueuePositionManager.cpp  WorkCellSimulator.cpp  WorkCellStateMachine.cpp
src/spice_control/: CMakeLists.txt  controller.xml  package.xml
src/spice_control/include/spice_control/: controller.hpp
src/spice_control/src/: controller.cpp
src/spice_mapf/: CMakeLists.txt  package.xml
src/spice_mapf/include/spice_mapf/: mapf_navigator.hpp
src/spice_mapf/scripts/: Agent.py  Map.py  Planning.py  PrioritizedPlanner.py  Simulation.py  Visualizer.py  mapf_controller.py  mapf_navigator_node.py  mapf_navigator_test_client.py  mapf_planner_node.py  test_agent_node.py
src/spice_mapf/spice_mapf/test_scenarios/: exp16_16.txt  exp5_5.txt  exp8_8.txt
src/spice_mapf/src/: mapf_navigator_node.cpp
src/spice_mapf_msgs/: CMakeLists.txt  package.xml
src/spice_mapf_msgs/action/: NavigateMapf.action
src/spice_mapf_msgs/msg/: Location.msg  Path.msg  Position.msg  RobotPose.msg  RobotPoses.msg
src/spice_mapf_msgs/srv/: JoinPlanner.srv  RequestGoal.srv
src/spice_msgs/: CMakeLists.txt  package.xml
src/spice_msgs/msg/: Id.msg  LedOutput.msg  Node.msg  Param.msg  Performance.msg  PlannerType.msg  ProcessingType.msg  QueueOccupancy.msg  QueuePoint.msg  QueuePoints.msg  Robot.msg  RobotPlan.msg  RobotState.msg  RobotStateTransition.msg  RobotType.msg  Task.msg  TaskData.msg  Work.msg  WorkCellType.msg
src/spice_msgs/srv/: AllocTask.srv  AllocWorkCell.srv  CreateWorkCell.srv  DeleteWorkCell.srv  GetPlan.srv  GetReadyRobots.srv  GetRobots.srv  GetRobotsByState.srv  GetRobotsByType.srv  Heartbeat.srv  RegisterRobot.srv  RegisterWork.srv  RobotReady.srv  RobotTask.srv  SetPlannerType.srv
src/spice_nav/: CMakeLists.txt  dynamic_obstacle_layer.xml  global_planner_plugin.xml  package.xml  plugin_descriptions.xml  workcell_cost_layer.xml
src/spice_nav/config/: global_map.yaml  navigation.yaml  slam.yaml
src/spice_nav/config/behavior_trees/: custom_bt3.xml  custom_bt_of_navigate_to_pose_w_replanning_and_recovery_with_waitcondition.xml  custom_bt_of_navigate_to_pose_w_replanning_and_recovery_with_waitcondition_and_goalupdate.xml  custom_bt_test.xml  custom_bt_test2.xml  custom_bt_test_simple.xml  custom_test_bt.xml  custom_test_bt_simple.xml
src/spice_nav/include/spice_nav/: NavWaitConditionNode.hpp  central_planner.hpp  central_planner_plugin.hpp  dynamic_obstacle_layer.hpp  workcell_cost_layer.hpp
src/spice_nav/launch/: bringup.launch.py  central_navigation.launch.py  global_map_server.launch.py  localization.launch.py  nav_bringup.launch.py  nav_localization.launch.py  nav_stack.launch.py  navigation.launch.py  polybot_rsm_mapf.launch.py  rsm_mapf.launch.py  slam.launch.py
src/spice_nav/maps/: A4.pgm  A4.yaml  A4_legless.yaml  A4_low_res.pgm  A4_new.pgm  A4_new.yaml  A4_new_65.pgm  A4_new_65.yaml  A4_no_leg.pgm  C4.pgm  C4.yaml  canteen.pgm  canteen.yaml  home.pgm
src/spice_nav/maps/low_res/: A4.pgm  A4.pgm~  A4.yaml  A42.pgm  A42.yaml  A4_60.pgm  A4_60.yaml  A4_65.pgm  A4_65.yaml  A4_70.pgm  A4_70.yaml  A4_75.pgm  A4_75.yaml  A4_nav.pgm  A4_nav.yaml  A4_new_65.pgm  A4_new_nav.pgm  A4_new_nav.yaml  C4.pgm  C4.yaml  C4_nav.yaml
src/spice_nav/maps/other_maps/: 10x10SimMap.pgm  10x10SimMap.yaml  13x13SimMap.pgm  13x13SimMap.yaml  A4_cropped_w_o_holes.pgm  largeSimMap.pgm  largeSimMap.yaml
src/spice_nav/scripts/: dynamic_obstacle_avoidance.py
src/spice_nav/src/: DynamicObstacleLayer.cpp  NavWaitConditionNode.cpp  NavWaitHandler.cpp  central_planner_plugin.cpp  workcell_cost_layer.cpp
src/spice_viz/: CMakeLists.txt  package.xml
src/spice_viz/launch/: rviz_polybot.launch.py  rviz_workcell.launch.py  set_job_locations.launch.py  test.launch.py
src/spice_viz/rviz/: default_polybot_viz.rviz  set_job_poses.rviz
src/spice_viz/scripts/: workcell_editor.py
src/spice_viz/src/: robot_mesh_publisher.cpp
(+6 files in other folders)
