<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spice_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="olauri18@student.aau.dk">oliver</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>spice_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <spice_nav_core plugin="${prefix}/dynamic_obstacle_layer.xml"/>
    <spice_nav_core plugin="${prefix}/workcell_cost_layer.xml"/>
    <build_type>ament_cmake</build_type>
    <exec_depend>nav2_bringup</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>
    <spice_nav_central_planner plugin="${prefix}/global_planner_plugin.xml" />
  </export>
</package>
