cmake_minimum_required(VERSION 3.8)
project(spice_viz)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(rclcpp REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2_msgs REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(spice_msgs REQUIRED)

add_executable(robot_mesh_publisher src/robot_mesh_publisher.cpp)
ament_target_dependencies(
  robot_mesh_publisher
  geometry_msgs
  rclcpp
  tf2
  tf2_ros
  tf2_msgs
  visualization_msgs
  spice_msgs
)
install(TARGETS
    robot_mesh_publisher 
    DESTINATION lib/${PROJECT_NAME})

install(
  DIRECTORY launch rviz meshes
  DESTINATION share/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
